@@ -1,3 +1,6 @@
+2011-11-04
+ * close_for command for dome
+
 2011-10-28
  * print expected number of images of a script
 
